// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v2/view-builder/views/CaptchaView ALTCHA Captcha view renders correctly with ALTCHA configuration: with ALTCHA configuration 1`] = `
<div
  class="captcha-view"
>
  <div
    class="altcha-captcha"
    data-callback="OktaSignInWidgetOnCaptchaSolved"
    data-sitekey="altcha-site-key"
    data-size="invisible"
    id="captcha-container"
  />
</div>
`;

exports[`v2/view-builder/views/CaptchaView view renders correctly based on Captcha configuration: default 1`] = `
<div
  class="captcha-view"
>
  <div
    class="g-recaptcha"
    data-callback="OktaSignInWidgetOnCaptchaSolved"
    data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
    data-size="invisible"
    id="captcha-container"
  />
</div>
`;

exports[`v2/view-builder/views/CaptchaView view renders correctly based on Captcha configuration: with no Captcha configuration 1`] = `
<div
  class="captcha-view"
/>
`;
